--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "mersenne-twister": "^1.1.0",
     "morgan": "~1.9.1",
     "pug": "^2.0.4",
-    "uglify-js": "^2.6.0"
+    "uglify-js": "^2.6.0",
+    "jsdom": "^16.5.3",
+    "node-fetch": "^2.6.1"
   }
 }
