--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
     "uglify-js": "^2.6.0",
     "jsdom": "^16.5.3",
     "node-fetch": "^2.6.1",
-    "pupeteer": "^9.0.0"
+    "puppeteer": "^9.0.0"
   }
 }
