--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
     "pug": "^2.0.4",
     "uglify-js": "^2.6.0",
     "jsdom": "^16.5.3",
-    "node-fetch": "^2.6.1",
+    "node-fetch": "^2.6.1"
   }
 }
